--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@tsparticles/slim": "^3.3.0",
     "framer-motion": "^11.0.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-particle-backgrounds": "^1.0.4",
+    "react-particles": "^2.12.2",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
